# interview-experience-finder

./: .gitignore  README.md  pyproject.toml
data/index/: records.json  search_index.pkl
src/interview_experience_finder/: cli.py  index.py  models.py  search.py
tests/: test_cli_search.py
