[project]
name = "interview-experience-finder"
version = "0.1.0"
description = "Fast local CLI for finding the most relevant behavioral interview story"
readme = "README.md"
authors = [
    { name = "ottoman91", email = "usman.khaliq91@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "rich>=14.3.3",
    "scikit-learn>=1.6.1",
]

[project.scripts]
finder = "interview_experience_finder:main"
interview-experience-finder = "interview_experience_finder:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
